--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="BrightWave Enterprises - Affordable, quality student housing in Nigeria." />
+  <title>BrightWave Enterprises</title>
+  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
+</head>
+<body>
 
+  <!-- Navigation Bar -->
+  <header>
+    <nav>
+      <h1>
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px; vertical-align: middle;" />
+        BrightWave Enterprises
+      </h1>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-image" style="background-image: url('/assets/images/who-we-are.jpg');">
+      <div class="hero-overlay">
+        <h1>Modern Housing, Lasting Impact</h1>
+        <p>Student-centered. Community-driven. Built to last.</p>
+        <a href="#projects" class="btn">Explore Our Projects</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>Who We Are</h2>
+    <p>
+      BrightWave Enterprises is a real estate-driven movement committed to reshaping student accommodation in Nigeria. 
+      We create affordable, stylish, and secure hostels that support students’ growth while enriching the communities we build in.
+    </p>
+    <img src="/assets/images/brightwave-project-1.jpg" alt="Our Vision" class="about-img" />
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <h2>Our Projects</h2>
+    <p>We're transforming ideas into infrastructure. Here's a look at what we're building.</p>
+    <div class="project-gallery">
+      <div class="project-card">
+        <img src="/assets/images/brightwave-project-1.jpg" alt="BrightWave Hostel Front" />
+        <h3>Hostel Project – Phase 1</h3>
+        <p>Located in Osun State, our 10-room hostel is designed for convenience, community, and security.</p>
+      </div>
+      <div class="project-card">
+        <img src="/assets/images/brightwave-project-2.jpg" alt="BrightWave Hostel Layout" />
+        <h3>Architectural Layout</h3>
+        <p>Modern designs that meet comfort and student lifestyle — crafted with purpose and precision.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="cta">
+    <h2>Interested in Partnering or Investing?</h2>
+    <p>We’re always open to collaborative ideas that align with our mission.</p>
+    <a href="contact.html" class="btn">Get In Touch</a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
