--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us | BrightWave Enterprises</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="icon" type="image/png" href="assets/images/brightwave-logo.png" />
+</head>
+<body>
 
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 50px; vertical-align: middle;" />
+      <h1>BrightWave Enterprises</h1>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Contact Page Content -->
+  <main class="contact">
+    <section class="contact-intro">
+      <h2>Contact Us 📬</h2>
+      <p>
+        Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you. 
+        Fill out the form below and someone from our team will get back to you shortly.
+      </p>
+      <img src="assets/images/customer-service.png" alt="Customer Support" style="max-width: 100px; margin: 25px auto;" />
+    </section>
+
+    <section class="contact-form">
+      <form id="contactForm">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="e.g. John Doe" required />
+
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="e.g. john@example.com" required />
+
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+      <div id="statusMessage" style="margin-top: 20px;"></div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  </footer>
+
+  <!-- JavaScript -->
+  <script>
+    document.getElementById("contactForm").addEventListener("submit", async function (e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+
+      const response = await fetch("https://brightwaveenterprises.online/api/contact", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ name, email, message })
+      });
+
+      const result = await response.json();
+      const statusDiv = document.getElementById("statusMessage");
+      statusDiv.textContent = result.message;
+      statusDiv.style.color = result.success ? "green" : "red";
+
+      if (result.success) {
+        document.getElementById("contactForm").reset();
+      }
+    });
+  </script>
+
+</body>
+</html>
