--- a/about.html
+++ b/about.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us | BrightWave Enterprises</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="icon" type="image/png" href="assets/images/brightwave-logo.png" />
+</head>
+<body>
 
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 50px; vertical-align: middle;" />
+      <h1>BrightWave Enterprises</h1>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Intro Section -->
+  <main class="about">
+    <section class="intro">
+      <h2>About BrightWave</h2>
+      <p>
+        BrightWave Enterprises is a Nigerian-based real estate startup transforming the student housing experience. 
+        We focus on building affordable, stylish, and secure accommodations that help students thrive academically while living comfortably and safely.
+      </p>
+      <p>
+        Our journey began with a mission to provide dignified spaces where young people can dream, study, and grow. Every hostel we design is guided by our values of integrity, functionality, and excellence.
+      </p>
+      <img src="assets/images/who-we-are.jpg" alt="About BrightWave" class="about-img" />
+    </section>
+
+    <!-- Team Section -->
+    <section class="team">
+      <h3>Meet the Team 👥</h3>
+      <div class="team-grid">
+        <div class="member">
+          <img src="assets/images/ceo-wally.jpg" alt="Wally H." />
+          <h4>Wally H.</h4>
+          <p>Founder & CEO</p>
+        </div>
+        <div class="member">
+          <img src="assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." />
+          <h4>Al-Ameen A.</h4>
+          <p>Project/Property Manager</p>
+        </div>
+        <div class="member">
+          <img src="assets/images/realtor-kamal.jpg" alt="Kamal B." />
+          <h4>Kamal B.</h4>
+          <p>Realtor</p>
+        </div>
+        <div class="member">
+          <img src="assets/images/customer-service.png" alt="Habeeb O." />
+          <h4>Habeeb O.</h4>
+          <p>Site Operations & Oversight</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
