--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,6 @@
   <title>Contact Us | BrightWave Enterprises</title>
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="icon" type="image/png" href="assets/images/brightwave-logo.png" />
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const toggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('nav ul');
-      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
-    });
-  </script>
 </head>
 <body>
 
@@ -32,12 +25,12 @@
     </nav>
   </header>
 
-  <!-- Contact Content -->
+  <!-- Contact Page Content -->
   <main class="contact">
     <section class="contact-intro">
       <h2>Contact Us 📬</h2>
       <p>
-        Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you. 
+        Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you.
         Fill out the form below and someone from our team will get back to you shortly.
       </p>
       <img src="assets/images/customer-service.png" alt="Customer Support" style="max-width: 100px; margin: 25px auto;" />
@@ -65,7 +58,16 @@
     <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
   </footer>
 
-  <!-- Contact Script -->
+  <!-- Mobile Menu Toggle -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const toggle = document.querySelector('.menu-toggle');
+      const navLinks = document.querySelector('nav ul');
+      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
+    });
+  </script>
+
+  <!-- Contact Form Script -->
   <script>
     document.getElementById("contactForm").addEventListener("submit", async function (e) {
       e.preventDefault();
@@ -75,9 +77,7 @@
 
       const response = await fetch("https://brightwaveenterprises.online/api/contact", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
+        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, email, message })
       });
 
