--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,9 @@
       try {
         const response = await fetch("https://brightwaveenterprises.online/api/contact", {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
+          headers: {
+            "Content-Type": "application/json"
+          },
           body: JSON.stringify({ name, email, message })
         });
 
