--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="project-card">
         <img src="/assets/images/brightwave-project-1.jpg" alt="BrightWave Hostel Front" />
         <h3>Hostel Project – Phase 1</h3>
-        <p>Located in Osun State, our 10-room hostel is designed for convenience, community, and security.</p>
+        <p>Located in Kwara State, our 10-room hostel is designed for convenience, community, and security.</p>
       </div>
       <div class="project-card">
         <img src="/assets/images/brightwave-project-2.jpg" alt="BrightWave Hostel Layout" />
