--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -60,6 +60,21 @@
       </ul>
     </section>
 
+    <!-- Survey & Map -->
+    <section class="location-map">
+      <h3>Verified Location</h3>
+      <p>Surveyed property located at Osunlade Village, Malete — Moro LGA, Kwara State, Nigeria.</p>
+      <img src="assets/images/who-we-are.jpg" alt="Survey Plan" style="max-width: 300px; border: 2px solid #ccc; border-radius: 6px; margin-bottom: 15px;">
+      <iframe 
+        src="https://maps.google.com/maps?q=8.583498,%204.555573&z=15&output=embed" 
+        width="100%" 
+        height="300" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+    </section>
+
     <!-- Booking Form -->
     <section class="hostel-contact-form">
       <h3>Request More Information</h3>
@@ -73,10 +88,10 @@
       <div id="formStatus" style="margin-top: 20px;"></div>
     </section>
 
-    <!-- Coming Soon -->
+    <!-- Phase 2 -->
     <section class="coming-soon">
       <h3>Phase 2 - Coming Soon ⚡</h3>
-      <p>We are expanding to add 32-35 Rooms with even more amenities. Stay tuned!</p>
+      <p>We are expanding with 2 more plots to build 32-35 rooms, more amenities, and recreational features.</p>
     </section>
 
   </main>
@@ -95,7 +110,7 @@
     });
   </script>
 
-  <!-- Form Submission Script (Future Connection to Backend) -->
+  <!-- Form Submission -->
   <script>
     document.getElementById("hostelContactForm").addEventListener("submit", async function(e) {
       e.preventDefault();
@@ -113,13 +128,9 @@
         });
 
         const result = await response.json();
-
         statusDiv.textContent = result.message;
         statusDiv.style.color = result.success ? "green" : "red";
-
-        if (result.success) {
-          document.getElementById("hostelContactForm").reset();
-        }
+        if (result.success) document.getElementById("hostelContactForm").reset();
       } catch (error) {
         statusDiv.textContent = "Something went wrong. Please try again.";
         statusDiv.style.color = "red";
