--- a/brightwaveEnterprises-homepage/index.html
+++ b/brightwaveEnterprises-homepage/index.html
@@ -19,9 +19,11 @@
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/brightwaveEnterprises-homepage/" class="active">Home</a></li>
+        <li><a href="/AboutUs/">About</a></li>
+        <li><a href="/hostels/">Hostels</a></li>
+        <li><a href="/ContactUs/">Contact</a></li>
+        <li><a href="/faq/">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -69,7 +71,7 @@
   <section class="cta">
     <h2>Interested in Partnering or Investing?</h2>
     <p>We’re always open to collaborative ideas that align with our mission.</p>
-    <a href="contact.html" class="btn">Get In Touch</a>
+    <a href="/ContactUs/" class="btn">Get In Touch</a>
   </section>
 
   <!-- Footer -->
