--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="/brightwaveEnterprises-homepage/" class="active">Home</a></li>
-        <li><a href="/AboutUs/">About</a></li>
-        <li><a href="/hostels/">Hostels</a></li>
-        <li><a href="/ContactUs/">Contact</a></li>
-        <li><a href="/faq/">FAQ</a></li>
+        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/hostels">Hostels</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/faq">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -71,7 +71,7 @@
   <section class="cta">
     <h2>Interested in Partnering or Investing?</h2>
     <p>We’re always open to collaborative ideas that align with our mission.</p>
-    <a href="/ContactUs/" class="btn">Get In Touch</a>
+    <a href="/contact" class="btn">Get In Touch</a>
   </section>
 
   <!-- Footer -->
