--- a/hostels.html
+++ b/hostels.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hostels | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="assets/style.css">
-  <link rel="icon" href="assets/images/brightwave-logo.png" type="image/png">
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png">
 </head>
 <body>
 
@@ -13,15 +13,16 @@
   <header>
     <nav>
       <h1>
-        <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;">
         BrightWave Enterprises
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="homepage.html">Home</a></li>
-        <li><a href="hostels.html" class="active">Hostels</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/hostels" class="active">Hostels</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/faq">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -38,18 +39,18 @@
 
       <!-- Phase 1 - Ongoing Construction -->
       <div class="hostel-card ongoing">
-        <img src="assets/images/hostels/phase1-cover.jpg" alt="BrightWave Phase 1 Hostel">
+        <img src="/assets/images/hostels/phase1-cover.jpg" alt="BrightWave Phase 1 Hostel">
         <div class="hostel-info">
           <h3>BrightWave Phase 1 Hostel</h3>
           <p>10 Self-Contained Rooms · Private Bathrooms & Kitchens · 24/7 Security · Solar Power</p>
           <span class="status-label ongoing-label">Ongoing Construction 🚧</span>
-          <a href="hostel-detail.html" class="btn">View Details</a>
+          <a href="/hostel-detail" class="btn">View Details</a>
         </div>
       </div>
 
       <!-- Phase 2 - Coming Soon -->
       <div class="hostel-card coming-soon">
-        <img src="assets/images/hostels/phase2-placeholder.jpg" alt="BrightWave Phase 2 Coming Soon">
+        <img src="/assets/images/hostels/phase2-placeholder.jpg" alt="BrightWave Phase 2 Coming Soon">
         <div class="hostel-info">
           <h3>BrightWave Phase 2 (Coming Soon)</h3>
           <p>32-35 Rooms Planned · Extended Amenities · Constructing after Phase 1</p>
