--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FAQs | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="assets/style.css" />
-  <link rel="icon" href="assets/images/brightwave-logo.png" type="image/png" />
+  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png" />
 </head>
 <body>
 
@@ -13,15 +13,15 @@
   <header>
     <nav>
       <h1>
-        <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;">
         BrightWave Enterprises
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="homepage.html">Home</a></li>
-        <li><a href="hostels.html">Hostels</a></li>
-        <li><a href="faq.html" class="active">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/hostels">Hostels</a></li>
+        <li><a href="/faq" class="active">FAQs</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -71,6 +71,7 @@
     <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
   </footer>
 
+  <!-- Mobile Menu Toggle -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
