--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="assets/style.css" />
-  <link rel="icon" type="image/png" href="assets/images/brightwave-logo.png" />
+  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
 </head>
 <body>
 
@@ -13,14 +13,15 @@
   <header>
     <nav>
       <h1>
-        <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
         BrightWave Enterprises
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/hostels">Hostels</a></li>
+        <li><a href="/faq">FAQs</a></li>
+        <li><a href="/contact" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -33,7 +34,7 @@
         Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you.
         Fill out the form below and someone from our team will get back to you shortly.
       </p>
-      <img src="assets/images/customer-service.png" alt="Customer Support" style="max-width: 100px; margin: 25px auto;" />
+      <img src="/assets/images/customer-service.png" alt="Customer Support" style="max-width: 100px; margin: 25px auto;" />
     </section>
 
     <section class="contact-form">
