--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="assets/style.css" />
-  <link rel="icon" type="image/png" href="assets/images/brightwave-logo.png" />
+  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
 </head>
 <body>
 
@@ -13,14 +13,15 @@
   <header>
     <nav>
       <h1>
-        <img src="assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
         BrightWave Enterprises
       </h1>
       <div class="menu-toggle">☰</div>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/hostels">Hostels</a></li>
+        <li><a href="/faq">FAQs</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -37,7 +38,7 @@
         Our journey began with a mission to provide dignified spaces where young people can dream, study, and grow. 
         Every hostel we design is guided by our values of integrity, functionality, and excellence.
       </p>
-      <img src="assets/images/who-we-are.jpg" alt="About BrightWave" class="about-img" />
+      <img src="/assets/images/who-we-are.jpg" alt="About BrightWave" class="about-img" />
     </section>
 
     <!-- Team Section -->
@@ -45,22 +46,22 @@
       <h3>Meet the Team 👥</h3>
       <div class="team-grid">
         <div class="member">
-          <img src="assets/images/ceo-wally.jpg" alt="Wally H." />
+          <img src="/assets/images/ceo-wally.jpg" alt="Wally H." />
           <h4>Wally H.</h4>
           <p>Founder & CEO</p>
         </div>
         <div class="member">
-          <img src="assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." />
+          <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." />
           <h4>Al-Ameen A.</h4>
           <p>Project/Property Manager</p>
         </div>
         <div class="member">
-          <img src="assets/images/realtor-kamal.jpg" alt="Kamal B." />
+          <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." />
           <h4>Kamal B.</h4>
           <p>Realtor</p>
         </div>
         <div class="member">
-          <img src="assets/images/customer-service.png" alt="Habeeb O." />
+          <img src="/assets/images/customer-service.png" alt="Habeeb O." />
           <h4>Habeeb O.</h4>
           <p>Site Operations & Oversight</p>
         </div>
