--- a/about.html
+++ b/about.html
@@ -46,22 +46,22 @@
       <h3>Meet the Team 👥</h3>
       <div class="team-grid">
         <div class="member">
-          <img src="/assets/images/ceo-wally.jpg" alt="Wally H." />
+          <img src="/assets/images/ceo-wally.jpg" alt="Wally H." class="team-photo"/>
           <h4>Wally H.</h4>
           <p>Founder & CEO</p>
         </div>
         <div class="member">
-          <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." />
+          <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." class="team-photo"/>
           <h4>Al-Ameen A.</h4>
           <p>Project/Property Manager</p>
         </div>
         <div class="member">
-          <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." />
+          <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." class="team-photo"/>
           <h4>Kamal B.</h4>
           <p>Realtor</p>
         </div>
         <div class="member">
-          <img src="/assets/images/customer-service.png" alt="Habeeb O." />
+          <img src="/assets/images/oversight-Realtor-Habeeb.jpg" alt="Habeeb O." class="team-photo"/>
           <h4>Habeeb O.</h4>
           <p>Site Operations & Oversight</p>
         </div>
