--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
       <div class="team-grid grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 max-w-5xl mx-auto">
         <div class="member text-center">
           <div class="relative group">
-            <img src="/assets/images/ceo-wally.jpg" alt="Wally H." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <img src="/assets/images/ceo-wally.jpg" alt="Wally H." class="w-48 h-48 rounded-full object-cover object-top mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
             <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
           </div>
           <h4 class="text-xl font-bold mt-4 text-blue-400">Wally H.</h4>
@@ -106,7 +106,7 @@
         </div>
         <div class="member text-center">
           <div class="relative group">
-            <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." class="w-48 h-48 rounded-full object-cover object-top mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
             <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
           </div>
           <h4 class="text-xl font-bold mt-4 text-blue-400">Al-Ameen A.</h4>
@@ -118,7 +118,7 @@
         </div>
         <div class="member text-center">
           <div class="relative group">
-            <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." class="w-48 h-48 rounded-full object-cover object-top mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
             <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
           </div>
           <h4 class="text-xl font-bold mt-4 text-blue-400">Kamal B.</h4>
@@ -130,7 +130,7 @@
         </div>
         <div class="member text-center">
           <div class="relative group">
-            <img src="/assets/images/oversight-Realtor-Habeeb.jpg" alt="Habeeb O." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <img src="/assets/images/oversight-Realtor-Habeeb.jpg" alt="Habeeb O." class="w-48 h-48 rounded-full object-cover object-top mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
             <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
           </div>
           <h4 class="text-xl font-bold mt-4 text-blue-400">Habeeb O.</h4>
