--- a/about.html
+++ b/about.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Learn about BrightWave Enterprises, a Nigerian real estate startup transforming student housing." />
+  <!-- Open Graph Meta Tags for Previews -->
+  <meta property="og:title" content="About BrightWave Enterprises" />
+  <meta property="og:description" content="Learn about BrightWave Enterprises, a Nigerian real estate startup transforming student housing." />
+  <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-logo.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:url" content="https://brightwaveenterprises.online/about" />
+  <meta property="og:type" content="website" />
   <title>About BrightWave Enterprises</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
