--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="BrightWave Enterprises - Affordable, quality student housing in Nigeria." />
+  <!-- Open Graph Meta Tags for Previews -->
+  <meta property="og:title" content="BrightWave Enterprises" />
+  <meta property="og:description" content="Affordable, quality student housing in Nigeria. Discover modern hostels designed for comfort, security, and academic success." />
+  <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-logo.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:url" content="https://brightwaveenterprises.online/" />
+  <meta property="og:type" content="website" />
   <title>BrightWave Enterprises</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
