--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -66,7 +66,7 @@
     <p class="text-lg font-medium mb-6 max-w-3xl mx-auto">
       <span class="font-bold">Pricing:</span> Contact us for pricing details.<br>
       <span class="font-bold">Target Audience:</span> Ideal for university students in Kwara State seeking a safe and vibrant living space.<br>
-      <span class="font-bold">Availability:</span> Now accepting bookings for the 2025/2026 academic session.
+      <span class="font-bold">Availability:</span> Currently under construction. Expected completion by late 2025. Join our waitlist to stay updated!
     </p>
   </section>
 
