--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <i class="fab fa-x-twitter"></i>
           <span>Twitter</span>
         </a>
-        <a href="https://www.instagram.com/brightwave__?igsh=MXN3NHAzdGU1a2ppaQ%3D&utm_-source=qr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
+        <a href="https://www.instagram.com/brightwave___?igsh=MXN3NHAzdGU1a2ppaQ%3D&utm_-source=qr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
